# teams-translator

./: .env.example  .gitignore  README.md  pyproject.toml  test_batch_e2e.py  test_realtime_e2e.py
app/: database.py  main.py
app/api/routes/: meetings.py  realtime.py
app/core/: config.py
app/services/: summarizer.py  transcriber.py  translator.py
app/static/: index.html
tests/: conftest.py  test_api_meetings.py  test_api_realtime.py  test_summarizer.py  test_transcriber.py  test_translator.py  test_utils.py
windows_capture/: capture.py  requirements.txt
