[project]
name = "teams-translator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "anthropic",
    "faster-whisper",
    "numpy",
    "aiosqlite",
    "python-multipart",
    "python-dotenv",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "edge-tts>=7.2.8",
    "httpx>=0.28.1",
    "miniaudio>=1.61",
    "pydub>=0.25.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
